# chess_web_app

./: .gitignore  Cargo.toml  Rocket.toml  build.rs
frontend/: auth.html  game.html  index.html  message.html
frontend/css/: auth.css  game.css  index.css  message.css
frontend/error/: 404.html  500.html
frontend/js/: auth.js  game.js  games.js  index.js  ws_game_handler.js
src/: main.rs  models.rs  routing.rs  stockfish_interface.rs  utils.rs
